--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 #container{
     display:grid;
-    height:300vh;
+    height:450vh;
     row-gap:5vh;
-    width:200vh;
+    width:80vh;
     grid-template-areas:
     "he he he he"
     "ma ma ma ma"
@@ -14,17 +14,21 @@
     display:flex;
     grid-area:he;
     width:100%;
-    height: 50vh;
+    height: 65vh;
     background-color: black;
 
 }
-nav{
+.nav{
     display:flex;
+    width: 25%;
+    height: 35vh;
+    background-color: blueviolet;
 }
 .main{
     display:flex;
     grid-area:ma;
     width:60%;
+    height: 160vh;
     background-color: rgb(0, 0, 0);
     border-radius:10vh;
     margin-left: auto;
@@ -33,9 +37,15 @@ nav{
     display:flex;
     grid-area:as;
     width:60%;
+    height: 150vh;
+    border-radius:10vh;
+    margin-right: auto;
     background-color: black;
 }
 .footer{
     grid-area:fo;
+    width: 100%;
+    height: 50vh;
     background-color: black;
+    
 }
