--- a/css/style4.css
+++ b/css/style4.css
@@ -1,5 +1,8 @@
 #container{
     display:grid;
+    height:300vh;
+    row-gap:5vh;
+    width:200vh;
     grid-template-areas:
     "he he he he"
     "ma ma ma ma"
@@ -7,20 +10,30 @@
     "fo fo fo fo"
 
 }
-header {
+.header {
     display:flex;
     grid-area:he;
-
+    width: 100%;
+    height: 50vh;
+    background-color: black;
 }
-main{
+.main{
     display:flex;
     grid-area:ma;
-
+    width: 50%;
+    height: 60vh;
+background-color: black;
 }
-aside{
+.aside{
     display:flex;
     grid-area:as;
+    width: 30%;
+    height: 60vh;
+    background-color: black;
 }
-footer{
+.footer{
     grid-area:fo;
+    width: 100%;
+    height: 50vh;
+    background-color: black;
 }
