--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 #container{
     display:grid;
     height:450vh;
@@ -10,7 +11,7 @@
     "fo fo fo fo"
 
 }
-.header {
+header {
     display:flex;
     grid-area:he;
     width:100%;
@@ -18,34 +19,45 @@
     background-color: black;
 
 }
-.nav{
+nav{
     display:flex;
-    width: 25%;
-    height: 35vh;
+    width: 40%;
+    height: 20vh;
     background-color: blueviolet;
 }
-.main{
+main{
     display:flex;
     grid-area:ma;
     width:60%;
     height: 160vh;
     background-color: rgb(0, 0, 0);
     border-radius:10vh;
+    padding: 40px;
     margin-left: auto;
 }
-.aside{
+aside{
     display:flex;
     grid-area:as;
     width:60%;
     height: 150vh;
     border-radius:10vh;
+    margin-top: 50px;
+    padding: 40px;
     margin-right: auto;
     background-color: black;
 }
-.footer{
+footer{
     grid-area:fo;
     width: 100%;
     height: 50vh;
     background-color: black;
     
+}
+.glad {
+    height:32vh;
+    width:100%;
+}
+.matbutik {
+    height:32vh;
+    width:100%;
 }
