--- a/css/style3.css
+++ b/css/style3.css
@@ -1,5 +1,8 @@
 #container{
     display:grid;
+    height:300vh;
+    row-gap:5vh;
+    width:160vh;
     grid-template-areas:
     "he he he he"
     "ma ma as as"
@@ -7,30 +10,30 @@
     "fo fo fo fo"
 
 }
-.header {
+header {
     display:flex;
     grid-area:he;
     width: 100%;
     height: 50vh;
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(0, 0, 0);
 
 }
-.main{
+main{
     display:flex;
     grid-area:ma;
     width: 70%;
-    height: 70vh;
-    background-color: rgb(255, 0, 0);
+    height: 100vh;
+    background-color: rgb(0, 0, 0);
 
 }
-.aside{
+aside{
     display:flex;
     grid-area:as;
     width: 60%;
-    height: 70vh;
-    background-color: rgb(255, 0, 0);
+    height: 100vh;
+    background-color: rgb(0, 0, 0);
 }
-.footer{
+footer{
     grid-area:fo;
     width: 100%;
     height: 50vh;
