--- a/css/style2.css
+++ b/css/style2.css
@@ -12,6 +12,12 @@ header {
     grid-area:he;
 
 }
+nav{
+    display:flex;
+    width: 40%;
+    height: 20vh;
+    background-color: blueviolet;
+}
 main{
     display:flex;
     grid-area:ma;
