--- a/css/style3.css
+++ b/css/style3.css
@@ -2,11 +2,12 @@
     display:grid;
     height:300vh;
     row-gap:5vh;
-    width:160vh;
+    width:80vh;
     grid-template-areas:
     "he he he he"
     "ma ma as as"
     "ma ma as as"
+    "pa pa pa pa"
     "fo fo fo fo"
 
 }
@@ -18,20 +19,29 @@ header {
     background-color: rgb(0, 0, 0);
 
 }
+nav{
+    display:flex;
+    width: 40%;
+    height: 20vh;
+    background-color: blueviolet;
+}
 main{
     display:flex;
     grid-area:ma;
     width: 70%;
-    height: 100vh;
+    height: 60vh;
     background-color: rgb(0, 0, 0);
 
 }
 aside{
     display:flex;
     grid-area:as;
-    width: 60%;
-    height: 100vh;
+    width: 100%;
+    height: 60vh;
     background-color: rgb(0, 0, 0);
+}
+article{
+    
 }
 footer{
     grid-area:fo;
