--- a/css/style4.css
+++ b/css/style4.css
@@ -3,7 +3,7 @@
     display:grid;
     height:300vh;
     row-gap:5vh;
-    width:100vh;
+    width:80vh;
     grid-template-areas:
     "he he he he"
     "ma ma ma ma"
@@ -18,11 +18,17 @@ header {
     height: 50vh;
     background-color: black;
 }
+nav{
+    display:flex;
+    width: 40%;
+    height: 20vh;
+    background-color: blueviolet;
+}
 main{
     display:flex;
     grid-area:ma;
     width: 50%;
-    height: 60vh;
+    height: 50vh;
 background-color: black;
 }
 aside{
